Reworked tagging to be more correct.
* More correct means that tag keys and values now are enforced to be non-null and non-blank.
* Introduced package 'tag' in ditto-internal-utils-metrics for custom Ditto tag types.
* Introduced `TagSet` which is meant to replace `Map<String, String>` for tags. Working with `Map` is more cumbersome.
* Replaced `SpanTags` by `SpanTagKey` which allows to create `Tag`s for well-known keys in a typesafe manner.
* Renamed `TraceUriGenerator` to `TraceInformationGenerator` to reflect its actual purpose.
* Reduced API of `StoppedTimer`, `TraceInformation`, `TaggableMetricsInstrument` and `TaggedMetricInstrument` to the actually required functionality.

Signed-off-by: Juergen Fickel <juergen.fickel@bosch.io>