@@ -12,16 +12,13 @@
  */
 package org.eclipse.ditto.internal.utils.tracing;
 
-import static java.util.Objects.requireNonNull;
-
+import java.net.URI;
 import java.text.MessageFormat;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.Set;
 import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -30,77 +27,82 @@ import java.util.stream.Collectors;
 import javax.annotation.Nullable;
 import javax.annotation.concurrent.Immutable;
 
+import org.eclipse.ditto.base.model.common.ConditionChecker;
 import org.eclipse.ditto.base.model.json.JsonSchemaVersion;
-import org.eclipse.ditto.internal.utils.tracing.span.SpanTags;
+import org.eclipse.ditto.internal.utils.metrics.instruments.tag.TagSet;
+import org.eclipse.ditto.internal.utils.tracing.span.SpanTagKey;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * TraceUriGenerator generates a trace uri based on a specified path.
+ * TraceInformationGenerator generates a {@link TraceInformation} based on a specified path.
  * <p>
  * The purpose of this class is to minimize the amount of requests to be logged (e.g. by shortening requests),
  * in order to avoid the creation of too many Kamon traces (causing OutOfMemory).
  */
 @Immutable
-public final class TraceUriGenerator implements Function<String, TraceInformation> {
+public final class TraceInformationGenerator implements Function<String, TraceInformation> {
 
-    private static final Logger LOGGER = LoggerFactory.getLogger(TraceUriGenerator.class);
+    private static final Logger LOGGER = LoggerFactory.getLogger(TraceInformationGenerator.class);
 
     static final String SHORTENED_PATH_SUFFIX = "/x";
-    static final String MESSAGES_PATH_SUFFIX = "/messages";
-    static final String FALLBACK_PATH = "/other";
-
+    static final URI FALLBACK_URI = URI.create("/other");
 
     private static final int FIRST_API_VERSION = JsonSchemaVersion.V_2.toInt();
     private static final int LATEST_API_VERSION = JsonSchemaVersion.LATEST.toInt();
     private static final String API_VERSION_GROUP = "apiVersion";
     private static final String API_VERSIONS =
             "(?<" + API_VERSION_GROUP + ">[" + FIRST_API_VERSION + "-" + LATEST_API_VERSION + "])";
-    private static final List<String> SUB_PATHS_TO_SHORTEN =
-            Arrays.asList("things", "policies", "search/things");
+    private static final Set<String> SUB_PATHS_TO_SHORTEN = Set.of("things", "policies", "search/things");
     private static final String PATHS_TO_SHORTEN_GROUP = "shorten";
     private static final String PATHS_TO_SHORTEN_REGEX_TEMPLATE = "(?<" + PATHS_TO_SHORTEN_GROUP + ">^/(api)/" +
             API_VERSIONS +
             "/(?<entityType>{0}))(/(?<entityId>$|.*?))?(/(?<subEntityType>$|.*?))?(/(?<subEntityId>$|.*?))?($|/.*)";
     private static final String PATHS_EXACT_LENGTH_GROUP = "exact";
-    private static final List<String> PATHS_EXACT = Arrays.asList("ws/2", "health", "status", "status/health",
-            "overall/status/health", "devops/logging", "devops/config");
+    private static final Set<String> PATHS_EXACT = Set.of(
+            "ws/2",
+            "health",
+            "status",
+            "status/health",
+            "overall/status/health",
+            "devops/logging",
+            "devops/config"
+    );
     private static final String PATHS_EXACT_REGEX_TEMPLATE = "(?<" + PATHS_EXACT_LENGTH_GROUP + ">^/({0}))/?$";
-    private static final Pattern messagePattern = Pattern.compile("(.*/(inbox|outbox)/messages/.*)|(.*/inbox/claim)");
+    private static final Pattern MESSAGE_PATTERN = Pattern.compile("(.*/(inbox|outbox)/messages/.*)|(.*/inbox/claim)");
+    private static final String MESSAGES_PATH_SUFFIX = "/messages";
 
-    @Nullable private static TraceUriGenerator instance = null;
+    @Nullable private static TraceInformationGenerator instance = null;
 
     private final Pattern pathPattern;
 
-    private TraceUriGenerator(final Pattern pathPattern) {
+    private TraceInformationGenerator(final Pattern pathPattern) {
         this.pathPattern = pathPattern;
     }
 
     /**
-     * Returns an instance of {@code TraceUriGenerator}.
+     * Returns an instance of {@code TraceInformationGenerator}.
      *
      * @return the instance.
      */
-    public static TraceUriGenerator getInstance() {
-        final TraceUriGenerator result;
-
-        if (null != instance) {
-            result = instance;
-        } else {
-            final String subPathsToShortenOrRegex = createOrRegex(SUB_PATHS_TO_SHORTEN, true);
-            final String pathsToShortenRegex =
+    public static TraceInformationGenerator getInstance() {
+        var result = instance;
+        if (null == result) {
+            final var subPathsToShortenOrRegex = createOrRegex(SUB_PATHS_TO_SHORTEN, true);
+            final var pathsToShortenRegex =
                     MessageFormat.format(PATHS_TO_SHORTEN_REGEX_TEMPLATE, subPathsToShortenOrRegex);
 
-            final String pathsExactOrRegex = createOrRegex(PATHS_EXACT, true);
-            final String pathsExactRegex = MessageFormat.format(PATHS_EXACT_REGEX_TEMPLATE, pathsExactOrRegex);
+            final var pathsExactRegex =
+                    MessageFormat.format(PATHS_EXACT_REGEX_TEMPLATE, createOrRegex(PATHS_EXACT, true));
 
-            final String fullRegex = createOrRegex(
-                    Arrays.asList(createRegexGroup(pathsToShortenRegex), createRegexGroup(pathsExactRegex)), false);
-            final Pattern pattern = Pattern.compile(fullRegex);
-            instance = new TraceUriGenerator(pattern);
+            final var fullRegex = createOrRegex(
+                    List.of(createRegexGroup(pathsToShortenRegex), createRegexGroup(pathsExactRegex)),
+                    false
+            );
+            final var pattern = Pattern.compile(fullRegex);
+            instance = new TraceInformationGenerator(pattern);
             result = instance;
         }
-
         return result;
     }
 
@@ -115,43 +117,42 @@ public final class TraceUriGenerator implements Function<String, TraceInformatio
     }
 
     /**
-     * Generates a trace URI based on the given {@code path}.
+     * Generates a {@code TraceInformation} based on the given path String argument.
      *
      * @param path the path.
-     * @return the trace URI.
+     * @return the TraceInformation.
      * @throws NullPointerException if {@code path} is {@code null}.
+     * @throws IllegalArgumentException if for {@code path} no TraceInformation can be determined.
      */
     @Override
     public TraceInformation apply(final String path) {
-        requireNonNull(path, "The path must not be null!");
-
-        return extractTraceInformation(path);
+        return extractTraceInformation(ConditionChecker.checkNotNull(path, "path"));
     }
 
     private TraceInformation extractTraceInformation(final String path) {
-        final String normalizedPath = TraceUtils.normalizePath(path);
-        final Matcher messageMatcher = messagePattern.matcher(normalizedPath);
-        final Matcher matcher = pathPattern.matcher(normalizedPath);
-
-        final Map<String, String> tags = new HashMap<>();
+        final TraceInformation result;
+        final var normalizedPath = TraceUtils.normalizePath(path);
+        final var matcher = pathPattern.matcher(normalizedPath);
         if (matcher.matches()) {
-            final String traceUri;
-            final String sanitizedPath;
-            final String pathToShorten = matcher.group(PATHS_TO_SHORTEN_GROUP);
-            if (pathToShorten != null) {
-                final Optional<String> subEntityType = getMatcherValue("subEntityType", matcher);
+            final URI traceUri;
+            final URI sanitizedUri;
+            final var pathToShorten = matcher.group(PATHS_TO_SHORTEN_GROUP);
+            if (null != pathToShorten) {
+                final var messageMatcher = MESSAGE_PATTERN.matcher(normalizedPath);
                 if (messageMatcher.matches()) {
-                    traceUri = pathToShorten + MESSAGES_PATH_SUFFIX;
-                    sanitizedPath = traceUri;
+                    traceUri = URI.create(pathToShorten + MESSAGES_PATH_SUFFIX);
+                    sanitizedUri = traceUri;
                 } else {
-                    traceUri = pathToShorten + SHORTENED_PATH_SUFFIX;
-                    sanitizedPath = subEntityType.map(s -> traceUri + "/" + s + SHORTENED_PATH_SUFFIX).orElse(traceUri);
+                    traceUri = URI.create(pathToShorten + SHORTENED_PATH_SUFFIX);
+                    sanitizedUri = getMatcherValue("subEntityType", matcher)
+                            .map(s -> URI.create(traceUri + "/" + s + SHORTENED_PATH_SUFFIX))
+                            .orElse(traceUri);
                 }
             } else {
-                final String pathFullLength = matcher.group(PATHS_EXACT_LENGTH_GROUP);
-                if (pathFullLength != null) {
-                    traceUri = pathFullLength;
-                    sanitizedPath = traceUri;
+                final var pathFullLength = matcher.group(PATHS_EXACT_LENGTH_GROUP);
+                if (null != pathFullLength) {
+                    traceUri = URI.create(pathFullLength);
+                    sanitizedUri = traceUri;
                 } else {
                     // This branch is impossible:
                     // - (pathsToShortenRegex | pathsExactRegex) matches,
@@ -162,26 +163,28 @@ public final class TraceUriGenerator implements Function<String, TraceInformatio
                     throw new IllegalStateException();
                 }
             }
-            tags.put(SpanTags.REQUEST_PATH, sanitizedPath);
-            final TraceInformation info = new TraceInformation(traceUri, tags);
-            LOGGER.debug("Generated traceUri for '{}': '{}'", path, info);
-            return info;
+            result = TraceInformation.newInstance(
+                    traceUri,
+                    TagSet.ofTag(SpanTagKey.REQUEST_URI.getTagForValue(sanitizedUri))
+            );
+            LOGGER.debug("Generated trace information for <{}>: <{}>", path, result);
         } else {
-            // return fallback trace URI
-            tags.put(SpanTags.REQUEST_PATH, FALLBACK_PATH);
-            final TraceInformation fallback = new TraceInformation(FALLBACK_PATH, tags);
-            LOGGER.debug("Returning fallback traceUri for '{}': '{}'", path, fallback);
-            return fallback;
+
+            // return fallback trace information
+            result = TraceInformation.newInstance(
+                    FALLBACK_URI,
+                    TagSet.ofTag(SpanTagKey.REQUEST_URI.getTagForValue(FALLBACK_URI))
+            );
+            LOGGER.debug("Returning fall-back trace information for <{}>: <{}>", path, result);
         }
+        return result;
     }
 
-    private Optional<String> getMatcherValue(final String matchingGroup, final Matcher matcher) {
-        return tryGetCapturingGroup(matcher, matchingGroup)
-                .filter(Objects::nonNull)
-                .filter(g -> !g.isEmpty());
+    private static Optional<String> getMatcherValue(final String matchingGroup, final Matcher matcher) {
+        return tryGetCapturingGroup(matcher, matchingGroup).filter(g -> !g.isEmpty());
     }
 
-    private Optional<String> tryGetCapturingGroup(final Matcher matcher, final String group) {
+    private static Optional<String> tryGetCapturingGroup(final Matcher matcher, final String group) {
         try {
             return Optional.ofNullable(matcher.group(group));
         } catch (final IllegalArgumentException exception) {
@@ -192,14 +195,14 @@ public final class TraceUriGenerator implements Function<String, TraceInformatio
     }
 
     @Override
-    public boolean equals(final Object o) {
+    public boolean equals(@Nullable final Object o) {
         if (this == o) {
             return true;
         }
         if (o == null || getClass() != o.getClass()) {
             return false;
         }
-        final TraceUriGenerator that = (TraceUriGenerator) o;
+        final var that = (TraceInformationGenerator) o;
         return Objects.equals(pathPattern, that.pathPattern);
     }
 
